Fixing navbar on mobile landing page

--- a/css/front-page.css
+++ b/css/front-page.css
@@ -503,7 +503,6 @@ div.vertical-line{
         left: 0;
         background: rgba(0,0,0,0.);
         right: 0;
-        position: absolute;
         margin: 0;
     }
     .may-b-signature{
@@ -573,6 +572,7 @@ div.vertical-line{
     /**/
     .mobile-cover {
       display: block;
+      margin-top: -50px;
     }
     /**/
     .mobile-cover img{
